Azure SQL DB connection, migration and completed model

--- a/MediMove/MediMove/Client/Pages/FetchData.razor
+++ b/MediMove/MediMove/Client/Pages/FetchData.razor
@@ -1,5 +1,5 @@
 ﻿@page "/fetchdata"
-@    using MediMove.Shared
+@using MediMove.Shared.Entities
 @inject HttpClient Http
 
 <PageTitle>Weather forecast</PageTitle>
