--- a/MediMove/MediMove/Client/Pages/Index.razor
+++ b/MediMove/MediMove/Client/Pages/Index.razor
@@ -1,9 +1,7 @@
 ﻿@page "/"
 
-<PageTitle>Index</PageTitle>
+<PageTitle>MediMove</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Welcome to the MediMove app</h1>
 
-Welcome to your new app.
 
-<SurveyPrompt Title="How is Blazor working for you?" />
