--- a/MediMove/MediMove/Client/_Imports.razor
+++ b/MediMove/MediMove/Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using MediMove.Client
 @using MediMove.Client.Shared
+@using Microsoft.AspNetCore.Components.Authorization
