--- a/MediMove/MediMove/Client/Pages/LoginPage.razor
+++ b/MediMove/MediMove/Client/Pages/LoginPage.razor
@@ -25,35 +25,45 @@
         <button type="submit">Login</button>
     </p>
 </form>
-
+@*<AuthorizedView> 
 <form @onsubmit="HandleLogout">
     <p>
         <button type="submit">Logout</button>
     </p>
 </form>
+</AuthorizedView>*@
 
-@if (errorResponse != null && errorResponse.Errors != null)
+@if (response.ErrorResponse is not null)
 {
-    <p>Errors:</p>
-    <ul>
-        @foreach (var error in errorResponse.Errors)
-        {
-            <li>@error.Key.Replace("dto.",""):</li>
-            <ul>
-                @foreach (var errorMessage in error.Value)
-                {
-                    <li>@errorMessage.Replace("dto.","").Replace("dto", "")</li>
-                }
-            </ul>
-        }
-    </ul>
+    @if(response.ErrorResponse.Errors is null)
+    {
+        <p>
+            Wrong username or password.
+        </p>
+    }
+    else
+    {
+        <p>Errors:</p>
+        <ul>
+            @foreach (var error in response.ErrorResponse.Errors)
+            {
+                <li>@error.Key.Replace("dto.",""):</li>
+                <ul>
+                    @foreach (var errorMessage in error.Value)
+                    {
+                        <li>@errorMessage.Replace("dto.","").Replace("dto", "")</li>
+                    }
+                </ul>
+            }
+        </ul>
+    }
 }
+
 
 @code {
     private string email;
     private string password;
-    private ErrorResponse errorResponse;
-    private bool z;
+    private MediMoveResponse response = new();
 
     private async Task HandleLogin()
     {
@@ -66,30 +76,30 @@
         var json = JsonConvert.SerializeObject(loginDTO);
 
         var content = new StringContent(json, Encoding.UTF8, "application/json");
-        var response = await stateProvider.LoginAsync(content);
+        response = await stateProvider.LoginAsync(content);
 
-        errorResponse = response.ErrorResponse;
-        var httpResponse = response.HttpResponse;
-
-        var role = await stateProvider.GetRole();
-        switch(role)
+        if(response.HttpResponse is not null)
         {
-            case"Paramedic":
-                NavManager.NavigateTo("/MainParamedic");
-                break;
-            case "Dispacher":
-                NavManager.NavigateTo("/MainDispacher");
-                break;
-            case "Admin":
-                break;
-            default:
-                break;
+            var role = await stateProvider.GetRole();
+            switch (role)
+            {
+                case "Paramedic":
+                    NavManager.NavigateTo("/MainParamedic");
+                    break;
+                case "Dispacher":
+                    NavManager.NavigateTo("/MainDispacher");
+                    break;
+                case "Admin":
+                    break;
+                default:
+                    break;
+            }
         }
-
+        else
+        {
+            NavManager.NavigateTo("", true);
+        }
     }
 
-    private async Task HandleLogout()
-    {
-        stateProvider.Logout();
-    }
+  
 }
