--- a/MediMove/MediMove/Client/Shared/MainLayout.razor
+++ b/MediMove/MediMove/Client/Shared/MainLayout.razor
@@ -45,7 +45,7 @@
 
     private async Task HandleLogout()
     {
-        stateProvider.Logout();
+        await stateProvider.Logout();
         NavManager.NavigateTo("/login/", true);
     }
 }
