--- a/MediMove/MediMove/Client/_Imports.razor
+++ b/MediMove/MediMove/Client/_Imports.razor
@@ -9,3 +9,5 @@
 @using MediMove.Client
 @using MediMove.Client.Shared
 @using Microsoft.AspNetCore.Components.Authorization
+@using Radzen
+@using Radzen.Blazor
