--- a/MediMove/MediMove/Client/Pages/Login.razor
+++ b/MediMove/MediMove/Client/Pages/Login.razor
@@ -43,7 +43,7 @@
             switch (role)
             {
                 case "Paramedic":
-                    _navigationManager.NavigateTo("/paramedicRazor");
+                    _navigationManager.NavigateTo("/paramedic");
                     break;
                 case "Dispatcher":
                     _navigationManager.NavigateTo("/dispacher");
