--- a/MediMove/MediMove/Client/Shared/NavMenu.razor
+++ b/MediMove/MediMove/Client/Shared/NavMenu.razor
@@ -23,8 +23,8 @@
         </AuthorizeView>
         <AuthorizeView Roles="Dispatcher">
             <div class="nav-item px-3">
-                <NavLink class="nav-link" href="dispatcher" Match="NavLinkMatch.All">
-                    <span class="oi oi-home" aria-hidden="true"></span> Home
+                <NavLink class="nav-link" href="dispacher/CreateTransport">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Create Transport
                 </NavLink>
             </div>
             <div class="nav-item px-3">
