--- a/MediMove/MediMove/Client/Pages/Login.razor
+++ b/MediMove/MediMove/Client/Pages/Login.razor
@@ -12,11 +12,16 @@
             <RadzenCard>
                 <DataAnnotationsValidator/>
                 <ValidationSummary/>
-
-                <label>Email</label> <br />
-                <RadzenTextBox @bind-Value="dto.Email"></RadzenTextBox> <br />   @*Placeholder="Enter email..."*@
-                <label>Password</label> <br />
-                <RadzenPassword @bind-Value="dto.Password"></RadzenPassword> <br />   @*Placeholder="Enter password..."*@
+                <div class="form-group">
+                    <label for="email">Email:</label>
+                    <InputText id="email" class="form-control" @bind-Value="dto.Email" />
+                    <ValidationMessage For="@(() => dto.Email)" />
+                </div>
+                <div class="form-group">
+                    <label for="Password">Password:</label>
+                    <RadzenPassword id="Password" class="form-control" @bind-Value="dto.Password"></RadzenPassword>   @*Placeholder="Enter password..."*@
+                    <ValidationMessage For="@(() => dto.Password)" />
+                </div>
                 <hr />
                 <RadzenButton ButtonType="Radzen.ButtonType.Submit" Text="Login" ButtonStyle="Radzen.ButtonStyle.Primary" class="btn-block mr-2"/>
             </RadzenCard>
