--- a/MediMove/MediMove/Client/Shared/NavMenu.razor
+++ b/MediMove/MediMove/Client/Shared/NavMenu.razor
@@ -16,7 +16,7 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-                <NavLink class="nav-link" href="paramedic/avabilities">
+                <NavLink class="nav-link" href="paramedic/availabilities">
                 <span class="oi oi-plus" aria-hidden="true"></span> Avabilities
             </NavLink>
         </div>
