Register initial implementation.

--- a/MediMove/MediMove/Client/Pages/Dispacher/DispatcherCreateTransport.razor
+++ b/MediMove/MediMove/Client/Pages/Dispacher/DispatcherCreateTransport.razor
@@ -161,7 +161,7 @@
     private int? _selectedPatientId;
     private CreateTransportDTO createTransportDTO = new CreateTransportDTO();
     private GetAllPatientsResponse allPatientsResponse; // Replace with the appropriate type and initialization
-    private CreatePatientDTO createPatientDTO = new CreatePatientDTO();
+    private PatientDTO createPatientDTO = new PatientDTO();
 
     protected override async Task OnInitializedAsync()
     {
