--- a/MediMove/MediMove/Client/Pages/Login.razor
+++ b/MediMove/MediMove/Client/Pages/Login.razor
@@ -54,6 +54,7 @@
                     _navigationManager.NavigateTo("/dispacher");
                     break;
                 case "Admin":
+                    _navigationManager.NavigateTo("/");
                     break;
                 default:
                     break;
