--- a/MediMove/MediMove/Client/Shared/NavMenu.razor
+++ b/MediMove/MediMove/Client/Shared/NavMenu.razor
@@ -32,6 +32,13 @@
                     <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
                 </NavLink>
             </div>
+        </AuthorizeView>/admin/account/create
+        <AuthorizeView Roles="Admin">
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="/admin/account/create">
+                    <span class="oi oi-plus" aria-hidden="true"></span> Register
+                </NavLink>
+            </div>
         </AuthorizeView>
     </nav>
 </div>
