Added getting and putting employees

--- a/MediMove/MediMove/Client/Pages/Login.razor
+++ b/MediMove/MediMove/Client/Pages/Login.razor
@@ -49,6 +49,7 @@
                     _navigationManager.NavigateTo("/dispacher");
                     break;
                 case "Admin":
+                    _navigationManager.NavigateTo("/admin");
                     break;
                 default:
                     break;
