--- a/MediMove/MediMove/Client/Pages/Dispacher/DispatcherCreateTransport.razor
+++ b/MediMove/MediMove/Client/Pages/Dispacher/DispatcherCreateTransport.razor
@@ -3,7 +3,9 @@
 @using MediMove.Shared.Models.Enums
 @using MediMove.Client.Services
 @using System.Globalization
+@using MediMove.Shared.Validators
 @inject PatientService _PatientService
+@inject TeamService _TeamService
 
 <h3>Create Transport</h3>
 
@@ -17,6 +19,8 @@
                     <EditForm Model="@createTransportDTO" OnValidSubmit="HandleValidSubmit">
                         <DataAnnotationsValidator />
                         <ValidationSummary />
+                        
+                        
 
                         <div class="form-group">
                             <label for="patientId">Patient ID:</label>
@@ -26,7 +30,7 @@
 
                         <div class="form-group">
                             <label for="startTime">Start Time:</label>
-                            <InputDate id="startTime" class="form-control" @bind-Value="createTransportDTO.StartTime" />
+                            <InputDate id="startTime" class="form-control" @bind-Value="createTransportDTO.StartTime" oninput="HandleStartTimeInput" />
                             <ValidationMessage For="@(() => createTransportDTO.StartTime)" />
                         </div>
 
@@ -68,36 +72,72 @@
                             </InputSelect>
                             <ValidationMessage For="@(() => createTransportDTO.TransportType)" />
                         </div>
-
                         <div class="form-group">
                             <label for="teamId">Team ID:</label>
-                            <InputNumber id="teamId" class="form-control" @bind-Value="createTransportDTO.TeamId" />
+                            <input type="text" id="teamId" class="form-control" readonly value="@createTransportDTO.TeamId" />
                             <ValidationMessage For="@(() => createTransportDTO.TeamId)" />
                         </div>
+
+                        
 
                         <div class="form-group">
                             <button type="submit" class="btn btn-primary">Submit</button>
                         </div>
                     </EditForm>
                 </div>
+
+                @*<div class="card">
+                <h3>Transports</h3>
+
+                
+
+                <div class="patient-list-container">
+
+                    <div class="scrollable-list">
+                        @if (teamResponse.Teams.Count > 0)
+                        {
+                            foreach (var team in teamResponse.Teams)
+                            {
+                                <div class="@GetTeamItemClass(team.Key)" @onclick="() => SelectPatient(team.Key)">
+                                    <div class="patient-details">
+                                        <p><strong>Driver:</strong> @team.Value.DriverFirstName @team.Value.DriverFirstName</p>
+                                        <p><strong>Driver phone number:</strong> @team.Value.DriverPhoneNumber, </p>
+                                        <p><strong>Paramedic:</strong> @team.Value.ParamedicFirstName @team.Value.ParamedicLastName</p>
+                                        <p><strong>City:</strong> @team.Value.ParamedicPhoneNumber, </p>
+                                    </div>
+                                </div>
+                            }
+                        }
+                    </div>
+                </div>
+                </div>*@
             </div>
         </div>
         <div class="col-md-6">
             <div class="card">
+
+
+                <div class="form-group"><h5>List of Patients</h5></div>
                 <div class="card-body">
+                    <div class="search-bar">
+                        <input type="text" class="form-control" placeholder="Search by phone number" @bind="@phoneNumberSearch"/>
+                        <button type="button" class="btn btn-primary m-2" @onclick="SearchByPhoneNumber">Search</button>
+                        <button type="button" class="btn btn-primary m-2" @onclick="Refresh">Refresh</button>
+                    </div>
+
                     <div class="patient-list-container">
-                        <h5>List of Patients</h5>
+
                         <div class="scrollable-list">
-                            @if (allPatientsResponse != null)
+                            @if (allPatients != null)
                             {
-                                foreach (var patient in allPatientsResponse.Patients)
+                                foreach (var patient in allPatients.Patients)
                                 {
                                     <div class="@GetPatientItemClass(patient.Key)" @onclick="() => SelectPatient(patient.Key)">
                                         <div class="patient-details">
                                             <p><strong>Name:</strong> @patient.Value.FirstName @patient.Value.LastName</p>
                                             <p><strong>Address:</strong> @patient.Value.StreetAddress @patient.Value.HouseNumber</p>
-                                            <p><strong>City:</strong> @patient.Value.City</p>
-                                            <p><strong>Phone Number:</strong> Value.PhoneNumber</p>
+                                            <p><strong>City:</strong> @patient.Value.City, </p>
+                                            <p><strong>Phone Number:</strong> @patient.Value.PhoneNumber</p>
                                             <p><strong>Country:</strong> @patient.Value.Country</p>
                                         </div>
                                     </div>
@@ -105,23 +145,62 @@
                             }
                         </div>
                     </div>
+                </div>
 
-                    <h5>Add New Patient</h5>
+
+                <div class="card">
+
+                    <p>
+                        <div class="title"><h5>Add New Patient</h5></div>
+                    </p>
+
                     <div class="add-patient-form">
                         <div class="form-group">
                             <label for="firstName">First Name:</label>
-                            <input type="text" id="firstName" class="form-control" @bind="@createPatientDTO.FirstName" />
+                            <input type="text" id="firstName" class="form-control" @bind="@createPatientDTO.FirstName"/>
                         </div>
                         <div class="form-group">
                             <label for="lastName">Last Name:</label>
-                            <input type="text" id="lastName" class="form-control" @bind="@createPatientDTO.LastName" />
+                            <input type="text" id="lastName" class="form-control" @bind="@createPatientDTO.LastName"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="Country">Phone Number:</label>
+                            <input type="text" id="PhoneNumber" class="form-control" @bind="@createPatientDTO.PhoneNumber"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="Weight">Weight:</label>
+                            <input type="text" id="Weight" class="form-control" @bind="@createPatientDTO.Weight"/>
                         </div>
                         <div class="form-group">
                             <label for="streetAddress">Street Address:</label>
-                            <input type="text" id="streetAddress" class="form-control" @bind="@createPatientDTO.StreetAddress" />
+                            <input type="text" id="streetAddress" class="form-control" @bind="@createPatientDTO.StreetAddress"/>
                         </div>
-                        <!-- Rest of the patient form fields -->
-                        @*<button class="btn btn-primary" @onclick="AddPatient">Add Patient</button>*@
+                        <div class="form-group">
+                            <label for="HouseNumber">House Number:</label>
+                            <input type="text" id="HouseNumber" class="form-control" @bind="@createPatientDTO.HouseNumber"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="ApartmentNumbers">Apartment Number:</label>
+                            <input type="text" id="ApartmentNumber" class="form-control" @bind="@createPatientDTO.ApartmentNumber"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="City">City:</label>
+                            <input type="text" id="City" class="form-control" @bind="@createPatientDTO.City"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="PostalCode">Postal Code:</label>
+                            <input type="text" id="PostalCode" class="form-control" @bind="@createPatientDTO.PostalCode"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="StateProvince">State Province:</label>
+                            <input type="text" id="StateProvince" class="form-control" @bind="@createPatientDTO.StateProvince"/>
+                        </div>
+                        <div class="form-group">
+                            <label for="Country">Country:</label>
+                            <input type="text" id="Country" class="form-control" @bind="@createPatientDTO.Country"/>
+                        </div>
+
+                        <button class="btn btn-primary form-group" @onclick="AddPatient">Add Patient</button>
                     </div>
 
                 </div>
@@ -147,26 +226,47 @@
         background-color: #c8e6c9;
     }
 
+    .form-group {
+        margin: 20px;
+    }
+    .title {
+        margin: 30px;
+    }
+
     .patient-details {
-        /* Add additional styling as desired */
+        margin-left: 10px;
     }
 
     .add-patient-form {
         margin-top: 20px;
     }
+    .search-bar {
+        display: flex;
+        align-items: center;
+    }
+
 </style>
 
 
 @code {
+    private string? phoneNumberSearch;
     private int? _selectedPatientId;
+    private int? _selectedTeamId;
     private CreateTransportDTO createTransportDTO = new CreateTransportDTO();
-    private GetAllPatientsResponse allPatientsResponse; // Replace with the appropriate type and initialization
-    private PatientDTO createPatientDTO = new PatientDTO();
-
+    private GetAllPatientsResponse allPatients;
+    private GetAllPatientsResponse allPatientsResponse;// Replace with the appropriate type and initialization
+    private CreatePatientRequest createPatientDTO = new CreatePatientRequest();
+    private GetTeamsByDateAndShiftResponse teamResponse = new GetTeamsByDateAndShiftResponse();
     protected override async Task OnInitializedAsync()
     {
         allPatientsResponse = await _PatientService.GetPatients();
+        allPatients = allPatientsResponse;
         createTransportDTO.StartTime = DateTime.Now;
+    }
+
+    private async void HandleStartTimeInput(ChangeEventArgs e)
+    {
+        teamResponse = await _TeamService.GetTeamsByDAyAndShift(createTransportDTO.StartTime);
     }
 
     private void SelectPatient(int patientId)
@@ -183,15 +283,63 @@
         }
     }
 
+    private void SelectTeam(int patientId)
+    {
+        if (_selectedTeamId == patientId)
+        {
+            _selectedTeamId = null; // Deselect if the same patient is clicked
+            createTransportDTO.TeamId = 0; // Update the Patient ID field to a default value
+        }
+        else
+        {
+            _selectedTeamId = patientId;
+            createTransportDTO.TeamId = patientId;
+        }
+    }
+
     private string GetPatientItemClass(int patientId)
     {
         return patientId == _selectedPatientId ? "patient-item selected" : "patient-item";
     }
 
+    private string GetTeamItemClass(int teamId)
+    {
+        return teamId == _selectedTeamId ? "patient-item selected" : "patient-item";
+    }
+
+    
+
+
+
+    private async void SearchByPhoneNumber()
+    {
+        Dictionary<int, PatientDTO> filteredPatients = allPatients.Patients
+            .Where(p => p.Value.PhoneNumber == phoneNumberSearch) // Filter based on phone number
+            .ToDictionary(p => p.Key, p => p.Value); // Convert the result to a new dictionary
+
+    // Create a new GetAllPatientsResponse with the filtered patients
+        if (filteredPatients.Count > 0)
+            allPatients = new GetAllPatientsResponse(filteredPatients);
+        else 
+            allPatients = new GetAllPatientsResponse(new Dictionary<int, PatientDTO>());
+
+    }
+
+    private async void Refresh()
+    {
+        allPatients = await _PatientService.GetPatients();
+    }
+
+    private async void AddPatient()
+    {
+        await _PatientService.PostPatient(createPatientDTO);
+
+    }
+
     private void HandleValidSubmit()
     {
-    // Perform your desired action with the createTransportDTO object, such as saving it
-        // to a database or sending it to an API endpoint
+        throw new NotImplementedException();
     }
+
 }
 
