Fixed no request trigger issue

--- a/MediMove/MediMove/Client/Pages/Admin/AdminCreateAccount.razor
+++ b/MediMove/MediMove/Client/Pages/Admin/AdminCreateAccount.razor
@@ -42,7 +42,7 @@
             </div>
         </div>
     </RadzenCardBody>
-    <RadzenButton Text="Register" Type="ButtonType.Submit" />
+    <RadzenButton Text="Register" Type="ButtonType.Submit" Click="@HandleAdminSubmit" />
 </RadzenForm>
 }
 else if (selectedUserType == AccountType.Paramedic)
@@ -116,7 +116,7 @@ else if (selectedUserType == AccountType.Paramedic)
                 <!-- Add more fields as needed -->
             </div>
         </RadzenCardBody>
-    <RadzenButton Text="Register" Type="ButtonType.Submit" />
+    <RadzenButton Text="Register" Type="ButtonType.Submit" Click="@HandleParamedicSubmit" />
 </RadzenForm>
 }
 
@@ -187,7 +187,7 @@ else if (selectedUserType == AccountType.Dispatcher)
                 <!-- Add more fields as needed -->
             </div>
         </RadzenCardBody>
-    <RadzenButton Text="Register" Type="ButtonType.Submit" />
+    <RadzenButton Text="Register" Type="ButtonType.Submit" Click="@HandleDispatcherSubmit"/>
 </RadzenForm>
 }
 </RadzenCard>
